--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -161,6 +161,7 @@
     <Content Include="Areas\Business\Css\BZZX\BZZX_SY_ZHMM.css" />
     <Content Include="Areas\Business\Css\BZZX\BZZX_WZJY.css" />
     <Content Include="Areas\Business\Css\Common\Head.css" />
+    <Content Include="Areas\Business\Css\CXLB\CWCX.css" />
     <Content Include="Areas\Business\Css\CXLB\CLCX.css" />
     <Content Include="Areas\Business\Css\CXLB\FCCX.css" />
     <Content Include="Areas\Business\Css\HTFB\CL\CL_GCC.css" />
@@ -530,6 +531,7 @@
     <Content Include="Areas\Business\Css\XXXX\CL\CLXX_HC.css" />
     <Content Include="Areas\Business\Css\XXXX\CL\CLXX_JC.css" />
     <Content Include="Areas\Business\Css\XXXX\Common\XXXX_Common.css" />
+    <Content Include="Areas\Business\Css\XXXX\CW\CWXX_CWG.css" />
     <Content Include="Areas\Business\Css\XXXX\FC\FCXX_DZF.css" />
     <Content Include="Areas\Business\Css\XXXX\FC\FCXX_ESF.css" />
     <Content Include="Areas\Business\Css\XXXX\FC\FCXX_XZL.css" />
@@ -602,6 +604,7 @@
     <Content Include="Areas\Business\Scripts\Business\CXLB\CLCX\CLCX_HC.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\CLCX\CLCX_JC.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\Common\CXLB_Common.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\CWCX\CWCX_CWG.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\FCCX\FCCX_DZF.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\FCCX\FCCX_ESF.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\FCCX\FCCX_CF.js" />
@@ -1011,6 +1014,7 @@
     <Content Include="Areas\Business\Scripts\Business\XXXX\CLXX\CLXX_KC.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\CLXX\CLXX_HC.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\CLXX\CLXX_JC.js" />
+    <Content Include="Areas\Business\Scripts\Business\XXXX\CWXX\CWXX_CWG.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\FCXX\FCXX_DZF.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\FCXX\FCXX_ESF.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\FCXX\FCXX_CF.js" />
@@ -1390,6 +1394,7 @@
       <DependentUpon>png.aspx</DependentUpon>
     </Compile>
     <Compile Include="Areas\Business\BusinessAreaRegistration.cs" />
+    <Compile Include="Areas\Business\Controllers\CXLB\CWCXController.cs" />
     <Compile Include="Areas\Business\Controllers\CXLB\CLCXController.cs" />
     <Compile Include="Areas\Business\Controllers\OTHER\BaseController.cs" />
     <Compile Include="Areas\Business\Common\QRCodeHelper.cs" />
@@ -1426,6 +1431,7 @@
     <Compile Include="Areas\Business\Controllers\HTGL\WDXJController.cs" />
     <Compile Include="Areas\Business\Controllers\HTGL\WZCXController.cs" />
     <Compile Include="Areas\Business\Controllers\HTGL\XXGLController.cs" />
+    <Compile Include="Areas\Business\Controllers\XXXX\CWXXController.cs" />
     <Compile Include="Areas\Business\Controllers\XXXX\CLXXController.cs" />
     <Compile Include="Areas\Business\Controllers\XXXX\FCXXController.cs" />
     <Compile Include="Areas\Business\Controllers\OTHER\YHDLController.cs" />
@@ -1767,6 +1773,8 @@
     <Content Include="Areas\Business\Views\CLXX\CLXX_DDC.cshtml" />
     <Content Include="Areas\Business\Views\CLCX\CLCX_GCC.cshtml" />
     <Content Include="Areas\Business\Views\CLXX\CLXX_GCC.cshtml" />
+    <Content Include="Areas\Business\Views\CWCX\CWCX_CWG.cshtml" />
+    <Content Include="Areas\Business\Views\CWXX\CWXX_CWG.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
