--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -531,6 +531,9 @@
     <Content Include="Areas\Business\Css\XXXX\CL\CLXX_HC.css" />
     <Content Include="Areas\Business\Css\XXXX\CL\CLXX_JC.css" />
     <Content Include="Areas\Business\Css\XXXX\Common\XXXX_Common.css" />
+    <Content Include="Areas\Business\Css\XXXX\CW\CWXX_CWFW.css" />
+    <Content Include="Areas\Business\Css\XXXX\CW\CWXX_HNYC.css" />
+    <Content Include="Areas\Business\Css\XXXX\CW\CWXX_CWM.css" />
     <Content Include="Areas\Business\Css\XXXX\CW\CWXX_CWG.css" />
     <Content Include="Areas\Business\Css\XXXX\FC\FCXX_DZF.css" />
     <Content Include="Areas\Business\Css\XXXX\FC\FCXX_ESF.css" />
@@ -604,6 +607,9 @@
     <Content Include="Areas\Business\Scripts\Business\CXLB\CLCX\CLCX_HC.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\CLCX\CLCX_JC.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\Common\CXLB_Common.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\CWCX\CWCX_CWFW.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\CWCX\CWCX_HNYC.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\CWCX\CWCX_CWM.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\CWCX\CWCX_CWG.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\FCCX\FCCX_DZF.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\FCCX\FCCX_ESF.js" />
@@ -1014,6 +1020,9 @@
     <Content Include="Areas\Business\Scripts\Business\XXXX\CLXX\CLXX_KC.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\CLXX\CLXX_HC.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\CLXX\CLXX_JC.js" />
+    <Content Include="Areas\Business\Scripts\Business\XXXX\CWXX\CWXX_CWFW.js" />
+    <Content Include="Areas\Business\Scripts\Business\XXXX\CWXX\CWXX_HNYC.js" />
+    <Content Include="Areas\Business\Scripts\Business\XXXX\CWXX\CWXX_CWM.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\CWXX\CWXX_CWG.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\FCXX\FCXX_DZF.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\FCXX\FCXX_ESF.js" />
@@ -1775,6 +1784,12 @@
     <Content Include="Areas\Business\Views\CLXX\CLXX_GCC.cshtml" />
     <Content Include="Areas\Business\Views\CWCX\CWCX_CWG.cshtml" />
     <Content Include="Areas\Business\Views\CWXX\CWXX_CWG.cshtml" />
+    <Content Include="Areas\Business\Views\CWCX\CWCX_CWM.cshtml" />
+    <Content Include="Areas\Business\Views\CWXX\CWXX_CWM.cshtml" />
+    <Content Include="Areas\Business\Views\CWCX\CWCX_HNYC.cshtml" />
+    <Content Include="Areas\Business\Views\CWXX\CWXX_HNYC.cshtml" />
+    <Content Include="Areas\Business\Views\CWCX\CWCX_CWFW.cshtml" />
+    <Content Include="Areas\Business\Views\CWXX\CWXX_CWFW.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
