--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -547,6 +547,7 @@
     <Compile Include="ViewModels\CL\CL_KCView.cs" />
     <Compile Include="ViewModels\CL\CL_HCView.cs" />
     <Compile Include="ViewModels\CL\CL_JCView.cs" />
+    <Compile Include="ViewModels\CW\CW_CWZSLYView.cs" />
     <Compile Include="ViewModels\CW\CW_CWFWView.cs" />
     <Compile Include="ViewModels\CW\CW_CWYPSPView.cs" />
     <Compile Include="ViewModels\CW\CW_HNYCView.cs" />
