--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -618,6 +618,7 @@
     <Content Include="Areas\Business\Scripts\Business\CXLB\CWCX\CWCX_HNYC.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\CWCX\CWCX_CWM.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\CWCX\CWCX_CWG.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\ESCX\ESCX_SJSM_PBDN.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\ESCX\ESCX_SJSM_BJBDN.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\ESCX\ESCX_SJSM_ESSJ.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\FCCX\FCCX_DZF.js" />
@@ -1035,6 +1036,7 @@
     <Content Include="Areas\Business\Scripts\Business\XXXX\CWXX\CWXX_HNYC.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\CWXX\CWXX_CWM.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\CWXX\CWXX_CWG.js" />
+    <Content Include="Areas\Business\Scripts\Business\XXXX\ESXX\ESXX_SJSM_PBDN.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\ESXX\ESXX_SJSM_BJBDN.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\ESXX\ESXX_SJSM_ESSJ.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\FCXX\FCXX_DZF.js" />
@@ -1813,6 +1815,8 @@
     <Content Include="Areas\Business\Views\ESXX\ESXX_SJSM_ESSJ.cshtml" />
     <Content Include="Areas\Business\Views\ESCX\ESCX_SJSM_BJBDN.cshtml" />
     <Content Include="Areas\Business\Views\ESXX\ESXX_SJSM_BJBDN.cshtml" />
+    <Content Include="Areas\Business\Views\ESCX\ESCX_SJSM_PBDN.cshtml" />
+    <Content Include="Areas\Business\Views\ESXX\ESXX_SJSM_PBDN.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
