--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -538,6 +538,9 @@
     <Content Include="Areas\Business\Css\XXXX\CW\CWXX_HNYC.css" />
     <Content Include="Areas\Business\Css\XXXX\CW\CWXX_CWM.css" />
     <Content Include="Areas\Business\Css\XXXX\CW\CWXX_CWG.css" />
+    <Content Include="Areas\Business\Css\XXXX\ES\ESXX_JDJJBG_BGSB.css" />
+    <Content Include="Areas\Business\Css\XXXX\ES\ESXX_JDJJBG_JJRY.css" />
+    <Content Include="Areas\Business\Css\XXXX\ES\ESXX_JDJJBG_ESJJ.css" />
     <Content Include="Areas\Business\Css\XXXX\ES\ESXX_JDJJBG_ESJD.css" />
     <Content Include="Areas\Business\Css\XXXX\ES\ESXX_SJSM_TSJ.css" />
     <Content Include="Areas\Business\Css\XXXX\ES\ESXX_SJSM_SMCP.css" />
@@ -622,6 +625,9 @@
     <Content Include="Areas\Business\Scripts\Business\CXLB\CWCX\CWCX_HNYC.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\CWCX\CWCX_CWM.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\CWCX\CWCX_CWG.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\ESCX\ESCX_JDJJBG_BGSB.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\ESCX\ESCX_JDJJBG_JJRY.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\ESCX\ESCX_JDJJBG_ESJJ.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\ESCX\ESCX_JDJJBG_ESJD.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\ESCX\ESCX_SJSM_TSJ.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\ESCX\ESCX_SJSM_SMCP.js" />
@@ -1043,6 +1049,9 @@
     <Content Include="Areas\Business\Scripts\Business\XXXX\CWXX\CWXX_HNYC.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\CWXX\CWXX_CWM.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\CWXX\CWXX_CWG.js" />
+    <Content Include="Areas\Business\Scripts\Business\XXXX\ESXX\ESXX_JDJJBG_BGSB.js" />
+    <Content Include="Areas\Business\Scripts\Business\XXXX\ESXX\ESXX_JDJJBG_JJRY.js" />
+    <Content Include="Areas\Business\Scripts\Business\XXXX\ESXX\ESXX_JDJJBG_ESJJ.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\ESXX\ESXX_JDJJBG_ESJD.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\ESXX\ESXX_SJSM_TSJ.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\ESXX\ESXX_SJSM_SMCP.js" />
@@ -1833,6 +1842,12 @@
     <Content Include="Areas\Business\Views\ESXX\ESXX_SJSM_TSJ.cshtml" />
     <Content Include="Areas\Business\Views\ESCX\ESCX_JDJJBG_ESJD.cshtml" />
     <Content Include="Areas\Business\Views\ESXX\ESXX_JDJJBG_ESJD.cshtml" />
+    <Content Include="Areas\Business\Views\ESCX\ESCX_JDJJBG_ESJJ.cshtml" />
+    <Content Include="Areas\Business\Views\ESXX\ESXX_JDJJBG_ESJJ.cshtml" />
+    <Content Include="Areas\Business\Views\ESCX\ESCX_JDJJBG_JJRY.cshtml" />
+    <Content Include="Areas\Business\Views\ESXX\ESXX_JDJJBG_JJRY.cshtml" />
+    <Content Include="Areas\Business\Views\ESCX\ESCX_JDJJBG_BGSB.cshtml" />
+    <Content Include="Areas\Business\Views\ESXX\ESXX_JDJJBG_BGSB.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
