--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -538,6 +538,7 @@
     <Content Include="Areas\Business\Css\XXXX\CW\CWXX_HNYC.css" />
     <Content Include="Areas\Business\Css\XXXX\CW\CWXX_CWM.css" />
     <Content Include="Areas\Business\Css\XXXX\CW\CWXX_CWG.css" />
+    <Content Include="Areas\Business\Css\XXXX\ES\ESXX_MYFZMR_MYETYPWJ.css" />
     <Content Include="Areas\Business\Css\XXXX\ES\ESXX_JDJJBG_BGSB.css" />
     <Content Include="Areas\Business\Css\XXXX\ES\ESXX_JDJJBG_JJRY.css" />
     <Content Include="Areas\Business\Css\XXXX\ES\ESXX_JDJJBG_ESJJ.css" />
@@ -625,6 +626,7 @@
     <Content Include="Areas\Business\Scripts\Business\CXLB\CWCX\CWCX_HNYC.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\CWCX\CWCX_CWM.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\CWCX\CWCX_CWG.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\ESCX\ESCX_MYFZMR_MYETYPWJ.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\ESCX\ESCX_JDJJBG_BGSB.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\ESCX\ESCX_JDJJBG_JJRY.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\ESCX\ESCX_JDJJBG_ESJJ.js" />
@@ -1049,6 +1051,7 @@
     <Content Include="Areas\Business\Scripts\Business\XXXX\CWXX\CWXX_HNYC.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\CWXX\CWXX_CWM.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\CWXX\CWXX_CWG.js" />
+    <Content Include="Areas\Business\Scripts\Business\XXXX\ESXX\ESXX_MYFZMR_MYETYPWJ.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\ESXX\ESXX_JDJJBG_BGSB.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\ESXX\ESXX_JDJJBG_JJRY.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\ESXX\ESXX_JDJJBG_ESJJ.js" />
@@ -1848,6 +1851,8 @@
     <Content Include="Areas\Business\Views\ESXX\ESXX_JDJJBG_JJRY.cshtml" />
     <Content Include="Areas\Business\Views\ESCX\ESCX_JDJJBG_BGSB.cshtml" />
     <Content Include="Areas\Business\Views\ESXX\ESXX_JDJJBG_BGSB.cshtml" />
+    <Content Include="Areas\Business\Views\ESCX\ESCX_MYFZMR_MYETYPWJ.cshtml" />
+    <Content Include="Areas\Business\Views\ESXX\ESXX_MYFZMR_MYETYPWJ.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
