--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -901,16 +901,16 @@
     <Content Include="Areas\Business\Scripts\Business\HTFB\PFCG\PFCG_YX.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\PFCG\PFCG_YXYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\Common\Public_TP.js" />
-    <Content Include="Areas\Business\Scripts\Business\HTFB\PWKQ\PWKQ_DYP.js" />
-    <Content Include="Areas\Business\Scripts\Business\HTFB\PWKQ\PWKQ_DYPYZ.js" />
-    <Content Include="Areas\Business\Scripts\Business\HTFB\PWKQ\PWKQ_QTKQ.js" />
-    <Content Include="Areas\Business\Scripts\Business\HTFB\PWKQ\PWKQ_QTKQYZ.js" />
-    <Content Include="Areas\Business\Scripts\Business\HTFB\PWKQ\PWKQ_XFKGWQ.js" />
-    <Content Include="Areas\Business\Scripts\Business\HTFB\PWKQ\PWKQ_XFKGWQYZ.js" />
-    <Content Include="Areas\Business\Scripts\Business\HTFB\PWKQ\PWKQ_YCMP.js" />
-    <Content Include="Areas\Business\Scripts\Business\HTFB\PWKQ\PWKQ_YCMPYZ.js" />
-    <Content Include="Areas\Business\Scripts\Business\HTFB\PWKQ\PWKQ_YLYJDP.js" />
-    <Content Include="Areas\Business\Scripts\Business\HTFB\PWKQ\PWKQ_YLYJDPYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTFB\ES\ES_PWKQ_DYP.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTFB\ES\ES_PWKQ_DYPYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTFB\ES\ES_PWKQ_QTKQ.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTFB\ES\ES_PWKQ_QTKQYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTFB\ES\ES_PWKQ_XFKGWQ.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTFB\ES\ES_PWKQ_XFKGWQYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTFB\ES\ES_PWKQ_YCMP.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTFB\ES\ES_PWKQ_YCMPYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTFB\ES\ES_PWKQ_YLYJDP.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTFB\ES\ES_PWKQ_YLYJDPYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\QZZP\QZZP_JZZP.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\QZZP\QZZP_JZZPYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\QZZP\QZZP_QZZP.js" />
@@ -1621,11 +1621,11 @@
     <Content Include="Areas\Business\Views\CW\CW_CWYPSP.cshtml" />
     <Content Include="Areas\Business\Views\CW\CW_CWFW.cshtml" />
     <Content Include="Areas\Business\Views\CL\CL_JC.cshtml" />
-    <Content Include="Areas\Business\Views\PWKQ\PWKQ_DYP.cshtml" />
-    <Content Include="Areas\Business\Views\PWKQ\PWKQ_YCMP.cshtml" />
-    <Content Include="Areas\Business\Views\PWKQ\PWKQ_YLYJDP.cshtml" />
-    <Content Include="Areas\Business\Views\PWKQ\PWKQ_XFKGWQ.cshtml" />
-    <Content Include="Areas\Business\Views\PWKQ\PWKQ_QTKQ.cshtml" />
+    <Content Include="Areas\Business\Views\ES\ES_PWKQ_DYP.cshtml" />
+    <Content Include="Areas\Business\Views\ES\ES_PWKQ_YCMP.cshtml" />
+    <Content Include="Areas\Business\Views\ES\ES_PWKQ_YLYJDP.cshtml" />
+    <Content Include="Areas\Business\Views\ES\ES_PWKQ_XFKGWQ.cshtml" />
+    <Content Include="Areas\Business\Views\ES\ES_PWKQ_QTKQ.cshtml" />
     <Content Include="Areas\Business\Views\CY\CY_MS.cshtml" />
     <Content Include="Areas\Business\Views\CY\CY_KCTS.cshtml" />
     <Content Include="Areas\Business\Views\CY\CY_WM.cshtml" />
