--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -200,11 +200,11 @@
     <Compile Include="Maps\PFCG\PFCG_YBYQJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_YCLJBXX_Map.cs" />
     <Compile Include="Maps\PHOTOS_Map.cs" />
-    <Compile Include="Maps\PWKQ\PWKQ_DYPJBXX_Map.cs" />
-    <Compile Include="Maps\PWKQ\PWKQ_QTKQJBXX_Map.cs" />
-    <Compile Include="Maps\PWKQ\PWKQ_XFKGWQJBXX_Map.cs" />
-    <Compile Include="Maps\PWKQ\PWKQ_YCMPJBXX_Map.cs" />
-    <Compile Include="Maps\PWKQ\PWKQ_YLYJDPJBXX_Map.cs" />
+    <Compile Include="Maps\ES\ES_PWKQ_DYPJBXX_Map.cs" />
+    <Compile Include="Maps\ES\ES_PWKQ_QTKQJBXX_Map.cs" />
+    <Compile Include="Maps\ES\ES_PWKQ_XFKGWQJBXX_Map.cs" />
+    <Compile Include="Maps\ES\ES_PWKQ_YCMPJBXX_Map.cs" />
+    <Compile Include="Maps\ES\ES_PWKQ_YLYJDPJBXX_Map.cs" />
     <Compile Include="Maps\QZZP\QZZP_JZZPJBXX_Map.cs" />
     <Compile Include="Maps\QZZP\QZZP_QZZPJBXX_Map.cs" />
     <Compile Include="Maps\SHFW\SHFW_CLFW_DJSJWPJBXX_Map.cs" />
@@ -443,11 +443,11 @@
     <Compile Include="Models\PFCG\PFCG_YCLJBXX.cs" />
     <Compile Include="Models\PHOTOS.cs" />
     <Compile Include="Models\PublicType.cs" />
-    <Compile Include="Models\PWKQ\PWKQ_DYPJBXX.cs" />
-    <Compile Include="Models\PWKQ\PWKQ_QTKQJBXX.cs" />
-    <Compile Include="Models\PWKQ\PWKQ_XFKGWQJBXX.cs" />
-    <Compile Include="Models\PWKQ\PWKQ_YCMPJBXX.cs" />
-    <Compile Include="Models\PWKQ\PWKQ_YLYJDPJBXX.cs" />
+    <Compile Include="Models\ES\ES_PWKQ_DYPJBXX.cs" />
+    <Compile Include="Models\ES\ES_PWKQ_QTKQJBXX.cs" />
+    <Compile Include="Models\ES\ES_PWKQ_XFKGWQJBXX.cs" />
+    <Compile Include="Models\ES\ES_PWKQ_YCMPJBXX.cs" />
+    <Compile Include="Models\ES\ES_PWKQ_YLYJDPJBXX.cs" />
     <Compile Include="Models\QZZP\QZZP_JZZPJBXX.cs" />
     <Compile Include="Models\QZZP\QZZP_QZZPJBXX.cs" />
     <Compile Include="Models\SHFW\SHFW_CLFW_DJSJWPJBXX.cs" />
