--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -448,11 +448,11 @@
     <Content Include="Areas\Business\Css\HTFB\PFCG\PFCG_YX.css" />
     <Content Include="Areas\Business\Css\HTFB\PFCG\PFCG_YBYQ.css" />
     <Content Include="Areas\Business\Css\HTFB\PFCG\PFCG_YCL.css" />
-    <Content Include="Areas\Business\Css\HTFB\PWKQ\PWKQ_DYP.css" />
-    <Content Include="Areas\Business\Css\HTFB\PWKQ\PWKQ_QTKQ.css" />
-    <Content Include="Areas\Business\Css\HTFB\PWKQ\PWKQ_XFKGWQ.css" />
-    <Content Include="Areas\Business\Css\HTFB\PWKQ\PWKQ_YCMP.css" />
-    <Content Include="Areas\Business\Css\HTFB\PWKQ\PWKQ_YLYJDP.css" />
+    <Content Include="Areas\Business\Css\HTFB\ES\ES_PWKQ_DYP.css" />
+    <Content Include="Areas\Business\Css\HTFB\ES\ES_PWKQ_QTKQ.css" />
+    <Content Include="Areas\Business\Css\HTFB\ES\ES_PWKQ_XFKGWQ.css" />
+    <Content Include="Areas\Business\Css\HTFB\ES\ES_PWKQ_YCMP.css" />
+    <Content Include="Areas\Business\Css\HTFB\ES\ES_PWKQ_YLYJDP.css" />
     <Content Include="Areas\Business\Css\HTFB\QZZP\QZZP_JZZP.css" />
     <Content Include="Areas\Business\Css\HTFB\QZZP\QZZP_QZZP.css" />
     <Content Include="Areas\Business\Css\HTGL\WDZH\RZGL.css" />
@@ -1469,7 +1469,6 @@
     <Compile Include="Areas\Business\Controllers\HTFB\LYJDController.cs" />
     <Compile Include="Areas\Business\Controllers\HTFB\NLMFYController.cs" />
     <Compile Include="Areas\Business\Controllers\HTFB\PFCGController.cs" />
-    <Compile Include="Areas\Business\Controllers\HTFB\PWKQController.cs" />
     <Compile Include="Areas\Business\Controllers\HTFB\QZZPController.cs" />
     <Compile Include="Areas\Business\Controllers\HTFB\SHFWController.cs" />
     <Compile Include="Areas\Business\Controllers\HTFB\SWFWController.cs" />
@@ -1862,6 +1861,7 @@
     <Content Include="Areas\Business\Views\ESXX\ESXX_MYFZMR_FZXMXB.cshtml" />
     <Content Include="Areas\Business\Views\ESCX\ESCX_MYFZMR_MRBJ.cshtml" />
     <Content Include="Areas\Business\Views\ESXX\ESXX_MYFZMR_MRBJ.cshtml" />
+    <Content Include="Areas\Business\Views\ES\ES_SJSM_PBDN.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
