--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -538,6 +538,7 @@
     <Content Include="Areas\Business\Css\XXXX\CW\CWXX_HNYC.css" />
     <Content Include="Areas\Business\Css\XXXX\CW\CWXX_CWM.css" />
     <Content Include="Areas\Business\Css\XXXX\CW\CWXX_CWG.css" />
+    <Content Include="Areas\Business\Css\XXXX\ES\ESXX_WHYL_YSPSCP.css" />
     <Content Include="Areas\Business\Css\XXXX\ES\ESXX_MYFZMR_MRBJ.css" />
     <Content Include="Areas\Business\Css\XXXX\ES\ESXX_MYFZMR_FZXMXB.css" />
     <Content Include="Areas\Business\Css\XXXX\ES\ESXX_MYFZMR_MYETYPWJ.css" />
@@ -628,6 +629,7 @@
     <Content Include="Areas\Business\Scripts\Business\CXLB\CWCX\CWCX_HNYC.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\CWCX\CWCX_CWM.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\CWCX\CWCX_CWG.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\ESCX\ESCX_WHYL_YSPSCP.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\ESCX\ESCX_MYFZMR_MRBJ.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\ESCX\ESCX_MYFZMR_FZXMXB.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\ESCX\ESCX_MYFZMR_MYETYPWJ.js" />
@@ -1055,6 +1057,7 @@
     <Content Include="Areas\Business\Scripts\Business\XXXX\CWXX\CWXX_HNYC.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\CWXX\CWXX_CWM.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\CWXX\CWXX_CWG.js" />
+    <Content Include="Areas\Business\Scripts\Business\XXXX\ESXX\ESXX_WHYL_YSPSCP.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\ESXX\ESXX_MYFZMR_MRBJ.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\ESXX\ESXX_MYFZMR_FZXMXB.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\ESXX\ESXX_MYFZMR_MYETYPWJ.js" />
@@ -1862,6 +1865,8 @@
     <Content Include="Areas\Business\Views\ESCX\ESCX_MYFZMR_MRBJ.cshtml" />
     <Content Include="Areas\Business\Views\ESXX\ESXX_MYFZMR_MRBJ.cshtml" />
     <Content Include="Areas\Business\Views\ES\ES_SJSM_PBDN.cshtml" />
+    <Content Include="Areas\Business\Views\ESCX\ESCX_WHYL_YSPSCP.cshtml" />
+    <Content Include="Areas\Business\Views\ESXX\ESXX_WHYL_YSPSCP.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
